Changes since RTEMS-NFS 1.3:
RPCIOD:
 - Made task priority run-time configurable (and read from rtems_bsdnet_config
   by default).
NFS:
 - Minor mod. to fix 'type-punned pointer' warning (can avoid pointer cast).
 - Added global variable 'nfsStBlksize' (defaults to 8k) which is now
   used to report the file system's 'preferred' blocksize (stat(2)/st_blksize).
   The old behavior (server's fattr.st_blksize is passed through) can be
   obtained by setting nfsStBlksize=0.
   The new feature lets stdio use 8k buffers (only if newlib was built with
   HAVE_BLKSIZE defined). This enhances NFS (buffered) read performance quite
   a bit. Thanks to Steven Johnson <sjohnson@sakuraindustries.com> for helping
   with this.
 - Updated README (performance section).
 - Added simple performance test: nfsTest.c

Changes since RTEMS-NFS 1.3_pre2:
 RPCIOD:
 - fix a problem with NFS server clusters (reply comes from an IP address
   different from the destination of the request) by relaxing paranoia checks.

Changes since RTEMS-NFS 1.2:
 NFS:
 - replaced inet_aton -> inet_pton
 - replaced unsigned32 -> uint32_t
 - added _KERNEL definition for 4.7 compilation
 - silenced compiler warnings (4.7)
 - added -Wno-unused-variable in 'proto' -- rpcgen produces a lot of them.
 - new locking scheme. The 'in-use' counters cannot be protected by a mutex
   because files might be closed when a thread is deleted from a dispatch-disabled
   section where mutexes must not be locked. The counters are now protected by
   disabling interrupts.
   The only critical race-condition I can see ATM is while the NFS is being
   unmounted and the mount point is crossed by another thread. It should be the
   generic FS code's responsibility to handle that (but AFAIK, it doesn't) --
   it's out of our scope...
 - ftruncate didn't work. The functionality is achieved by nfs_sattr()
   setting the file size to 0. However, nfs_sattr() always tried to set