@@ -1,7 +1,11 @@
 Changes since RTEMS-NFS 1.3:
 RPCIOD:
+ - BUGFIX (reported by Steven Johnson, 12/5/06): we must change the XID
+   before sending a timed-out transaction back to the requestor to prevent
+   a late reply from being accepted.
  - Made task priority run-time configurable (and read from rtems_bsdnet_config
    by default).
+
 NFS:
  - Minor mod. to fix 'type-punned pointer' warning (can avoid pointer cast).
  - Added global variable 'nfsStBlksize' (defaults to 8k) which is now
